# Image_Picker

./: About.h  About.ui  CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  MainWindow.h  MainWindow.ui  MyWindow.h  README.md  backend.cpp  main.cpp  resource.qrc  resource.rc
